--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 nav > ul {
     list-style-type: none;
     display: flex;
@@ -6,12 +10,13 @@ nav > ul {
     align-items: center;
     background-color: #378261;
     margin: 0%;
+    padding: 0%;
     height: 40px;
 }
 
 header {
     text-align: center;
-    padding: 20px;
+    padding: 30px;
 }
 
 header > h1 {
@@ -28,6 +33,6 @@ nav > ul > li > a {
 }
 
 nav > ul > li > a:hover {
-    color: #D6E6A1;
+    color: #d6e6a1;
     text-decoration: underline;
 }
