--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 .home-grid {
     display: grid;
     grid-template-columns: 40vw 40vw;
-    grid-template-rows: 5vw 20vw 20vw 20vw;
+    grid-template-rows: 20vw 20vw 20vw 20vw;
     grid-template-areas:
         "title title"
         "img1 txt1"
@@ -14,6 +14,7 @@
 .grid-title {
     grid-area: title;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
