--- a/teststyles.scss
+++ b/teststyles.scss
@@ -6,6 +6,7 @@ $primary-text: Arial, Helvetica, sans-serif;
 * {
     padding: 0%;
     margin: 0%;
+    font-family: $primary-text;
 }
 .mainNav {
     list-style-type: none;
@@ -17,7 +18,6 @@ $primary-text: Arial, Helvetica, sans-serif;
     margin: 0%;
     padding: 0%;
     height: 40px;
-    font-family: $primary-text;
 }
 
 nav > ul > li > a {
@@ -47,7 +47,6 @@ nav > ul > li > a:hover {
         "img3 txt3";
     justify-content: center;
     align-items: center;
-    font-family: $primary-text;
 }
 
 .grid-title {
@@ -106,4 +105,31 @@ nav > ul > li > a:hover {
 .images {
     height: 20vw;
     width: 40vw;
+}
+
+.form {
+    border: 2px solid black;
+}
+
+.main-form {
+    display: flex;
+    justify-content: center;
+}
+
+main > .contact-form {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 10px;
+}
+
+.header_pagetitle {
+    @include flex(column, center, center);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#footer {
+    @include flex(column, baseline, flex-start);
+    background-color: $primary-color;
+    color: white;
 }
