--- a/teststyles.scss
+++ b/teststyles.scss
@@ -34,12 +34,29 @@ nav > ul > li > a:hover {
         "img3 txt3";
     justify-content: center;
     align-items: center;
+    @media only screen and (max-width: 480px) {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "title"
+            "title"
+            "img1"
+            "txt1"
+            "img2"
+            "txt2"
+            "img3"
+            "txt3";
+        justify-content: center;
+        align-items: center;
+        margin-left: 30%;
+    }
 
     &__title {
         grid-area: title;
         @include flex(column, center, center);
         @media only screen and (max-width: 480px) {
             font-size: 8px;
+            margin-right: 35%;
+            text-align: center;
         }
         @media only screen and (min-width: 481px) and (max-width: 869px) {
             font-size: 8px;
@@ -69,6 +86,9 @@ nav > ul > li > a:hover {
     &__img2 {
         grid-area: img2;
         @include flex(row, center, center);
+        @media only screen and (max-width: 480px) {
+            justify-content: left;
+        }
     }
     &__img3 {
         grid-area: img3;
