--- a/teststyles.css
+++ b/teststyles.css
@@ -191,6 +191,34 @@ nav > ul > li > a:hover {
   width: 40vw;
 }
 
+@media only screen and (max-width: 480px) {
+  iframe {
+    width: 50%;
+    height: 10%;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (min-width: 481px) and (max-width: 869px) {
+  iframe {
+    width: 80%;
+    height: 5%;
+  }
+}
+@media only screen and (min-width: 870px) {
+  iframe {
+    width: 550px;
+    height: 250px;
+    margin-left: 10px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #Italian {
+    margin-top: 10%;
+    margin-right: 40%;
+  }
+}
+
 .form {
   border: 2px solid black;
 }
