--- a/teststyles.scss
+++ b/teststyles.scss
@@ -5,6 +5,7 @@
     margin: 0%;
     font-family: $primary-text;
 }
+
 .mainNav {
     list-style-type: none;
     @include flex(row, space-around, center);
@@ -152,6 +153,30 @@ nav > ul > li > a:hover {
 .images {
     height: 20vw;
     width: 40vw;
+}
+
+iframe {
+    @media only screen and (max-width: 480px) {
+        width: 50%;
+        height: 10%;
+        margin-bottom: 10px;
+    }
+    @media only screen and (min-width: 481px) and (max-width: 869px) {
+        width: 80%;
+        height: 5%;
+    }
+    @media only screen and (min-width: 870px) {
+        width: 550px;
+        height: 250px;
+        margin-left: 10px;
+    }
+}
+
+#Italian {
+    @media only screen and (max-width: 480px) {
+        margin-top: 10%;
+        margin-right: 40%;
+    }
 }
 
 .form {
