--- a/teststyles.scss
+++ b/teststyles.scss
@@ -13,15 +13,15 @@
     margin: 0%;
     padding: 0%;
     height: 40px;
-}
 
-nav > ul > li > a {
-    color: white;
-    text-decoration: none;
-}
-nav > ul > li > a:hover {
-    color: #d6e6a1;
-    text-decoration: underline;
+    &__links {
+        color: white;
+        text-decoration: none;
+    }
+    &__links--highlighted:hover {
+        color: #d6e6a1;
+        text-decoration: underline;
+    }
 }
 
 .home-grid {
