--- a/teststyles.css
+++ b/teststyles.css
@@ -15,13 +15,11 @@
   padding: 0%;
   height: 40px;
 }
-
-nav > ul > li > a {
+.mainNav__links {
   color: white;
   text-decoration: none;
 }
-
-nav > ul > li > a:hover {
+.mainNav__links--highlighted:hover {
   color: #d6e6a1;
   text-decoration: underline;
 }
@@ -259,7 +257,7 @@ main > .contact-form {
   padding: 5px;
 }
 
-.maingallery {
+.container {
   display: flex;
   justify-content: center;
 }
@@ -267,18 +265,22 @@ main > .contact-form {
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-area: 20px;
+  grid-gap: 5px;
+  margin-bottom: 25px;
 }
-
-.gallery > img {
+.gallery__img {
   height: 200px;
   width: 300px;
   padding: 10px;
   border: 5px solid #d6e6a1;
 }
-
-.gallery > img:hover {
+.gallery__img--hover:hover {
   box-shadow: 0 32px 64px 0 #8bc46c;
+}
+@media only screen and (max-width: 700px) {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
 }
 
 .button {
