--- a/_variablesMixins.scss
+++ b/_variablesMixins.scss
@@ -15,3 +15,21 @@ $primary-text: Arial, Helvetica, sans-serif;
     padding: 20px;
     font-size: large;
 }
+
+@mixin phonetxt {
+    @media only screen and (max-width: 480px) {
+        font-size: 8px;
+        text-align: left;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@mixin tablettxt {
+    @media only screen and (min-width: 481px) and (max-width: 869px) {
+        font-size: 12px;
+        text-align: left;
+        margin: 5px;
+        padding: 5px;
+    }
+}
