--- a/teststyles.css
+++ b/teststyles.css
@@ -289,8 +289,24 @@
   padding: 10px;
   border: 5px solid #d6e6a1;
 }
-.gallery__img--hover:hover {
+.gallery .gardentitle h2 {
+  text-align: center;
+  position: relative;
+  bottom: 50%;
+  transform: translate(0%, -50%);
+  -webkit-transform: translate(0%, -50%);
+  color: white;
+  font-family: Arial;
+  display: none;
+}
+.gallery .gardentitle:hover img {
   box-shadow: 0 32px 64px 0 #8bc46c;
+  filter: brightness(100%);
+}
+.gallery .gardentitle:hover h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media only screen and (max-width: 700px) {
   .gallery {
