--- a/teststyles.scss
+++ b/teststyles.scss
@@ -183,6 +183,12 @@ iframe {
     bottom: 0;
     width: 100%;
 
+    @media only screen and (max-width: 630px) {
+        position: static;
+        bottom: 0;
+        width: 100%;
+    }
+
     &__content {
         @include flex(column, center, flex-start);
         background-color: $primary-color;
@@ -233,6 +239,7 @@ iframe {
     border-radius: 10px;
     padding: 5px;
     margin: 10px;
+
     &:hover {
         background-color: $accent-color;
     }
